--- a/pelisvhx/src/index.css
+++ b/pelisvhx/src/index.css
@@ -1,69 +1,167 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+html {
+  font-size: 62.5%; /* 62.5% es equivalente a 10px, entonces 1rem = 10px
+  /* 
+      Por defecto
+      ROOT EM  = rem 
+      1rem = 16px
+  
+  */
+  box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: 'Inter', sans-serif;
+  background-color: #968f8f;
+  background-image: url('bgloop4.jpg') ;
+  background-repeat: repeat;
+}
+
+img {
+  width: 100%;
+  display: block;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 5rem; /* 50px */
+  font-weight: 900;
+  text-align: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.container {
+  width: 95%;
+  max-width: 120rem; /* 1200px */
+  width: min(95%, 120rem); /* Significa lo mismo que las 2 lineas previas */
+  margin: 0 auto;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 5rem;
+}
+
+.moviecard {
+  padding: 0.5rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: #968f8f;
+}
+
+.moviecard h3 {
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.moviecard-image {
+  border-radius: 0.75rem;
+  overflow: hidden;
+}
+
+.moviecard:hover .moviecard-image img {
+  transform: scale(1.05);
+}
+
+.btn-seemore {
+  border: none;
+  display: block;
+  font-size: 2rem;
+  background-color: inherit;
+  margin: 5rem auto;
+  width: fit-content;
+  color: gray;
   cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.btn-seemore:hover {
+  color: #000;
+  transition: color 0.2s linear;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.headerclass {
+  width: 90%;
+  padding: 1rem;
+  margin: auto;
+  border-radius: 0.75rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.808);
+  background-color: #000;
+
+}
+
+.dropbtn {
+  background-color: rgb(148, 101, 196);
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+
+.divdrop{
+  display: flex;
+ justify-content: center;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #3e5a8e;
+}
+
+.divcontainer {
+  padding: 0.5rem;
+  margin: 1rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.719);
+  background-color: rgba(34, 32, 32, 0.664);
+}
+
+
+@media (min-width: 768px) {
+  .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media (min-width: 992px) {
+  .content {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
