--- a/pelisvhx/src/index.css
+++ b/pelisvhx/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+
 html {
-  font-size: 62.5%; /* 62.5% es equivalente a 10px, entonces 1rem = 10px
+  font-size: 62.5%;
+  /* 62.5% es equivalente a 10px, entonces 1rem = 10px
   /* 
       Por defecto
       ROOT EM  = rem 
@@ -15,10 +17,11 @@ html {
 *::before {
   box-sizing: inherit;
 }
+
 body {
   font-family: 'Inter', sans-serif;
   background-color: #968f8f;
-  background-image: url('bgloop4.jpg') ;
+  background-image: url('bgloop4.jpg');
   background-repeat: repeat;
 }
 
@@ -28,17 +31,32 @@ img {
 }
 
 h1 {
-  font-size: 5rem; /* 50px */
+  font-size: 5rem;
+  /* 50px */
   font-weight: 900;
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  color: #202020;
+}
+
 .container {
   width: 95%;
-  max-width: 120rem; /* 1200px */
-  width: min(95%, 120rem); /* Significa lo mismo que las 2 lineas previas */
+  max-width: 120rem;
+  /* 1200px */
+  width: min(95%, 120rem);
+  /* Significa lo mismo que las 2 lineas previas */
   margin: 0 auto;
 }
+
+.loader {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -46,11 +64,39 @@ h1 {
   margin-bottom: 5rem;
 }
 
+.btn-movie {
+  border: none;
+  background-color: unset;
+}
+
+.onemovie {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 10rem;
+}
+
+.onemovie-desktop {
+  display: none;
+}
+
+.onemovie-mobile {
+  display: block;
+}
+
 .moviecard {
   padding: 0.5rem;
   border-radius: 0.75rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  background-color: #968f8f;
+}
+
+.moviecard-description {
+  display: block;
+  padding: 2rem;
+  text-align: center;
+}
+
+.moviecard-vote {
+  font-size: 2rem;
 }
 
 .moviecard h3 {
@@ -77,6 +123,7 @@ h1 {
   color: gray;
   cursor: pointer;
 }
+
 .btn-seemore:hover {
   color: #000;
   transition: color 0.2s linear;
@@ -105,12 +152,12 @@ h1 {
 .dropdown {
   position: relative;
   display: inline-block;
-  
+
 }
 
-.divdrop{
+.divdrop {
   display: flex;
- justify-content: center;
+  justify-content: center;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -119,7 +166,7 @@ h1 {
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -132,7 +179,9 @@ h1 {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -145,6 +194,7 @@ h1 {
 }
 
 .divcontainer {
+  width: 98%;
   padding: 0.5rem;
   margin: 1rem;
   border-radius: 0.75rem;
@@ -152,16 +202,97 @@ h1 {
   background-color: rgba(34, 32, 32, 0.664);
 }
 
+.moviecontainer{
+  width: 98%;
+  padding: 0.5rem;
+  margin: 1rem;
+  border-radius: 0.75rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.719);
+  background-color: rgb(172, 163, 163, 0.5);
+}
 
 @media (min-width: 768px) {
   .content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .moviecard {
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .moviecard-description {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.5rem;
+    border-radius: 0.75rem;
+    text-align: center;
+    z-index: 10;
+    bottom: -100%;
+    left: 0;
+    opacity: 0;
+    transition: all 0.1s linear;
+  }
+
+  .moviecard:hover .moviecard-description {
+    bottom: 0;
+    opacity: 1;
+  }
 }
 
-@media (min-width: 992px) {
+
+@media (min-width: 500px) {
   .content {
+    
     grid-template-columns: repeat(4, 1fr);
+  }
+  
+  .moviecard {
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .moviecard-description {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.5rem;
+    border-radius: 0.75rem;
+    text-align: center;
+    z-index: 10;
+    bottom: -100%;
+    left: 0;
+    opacity: 0;
+    transition: all 0.1s linear;
+  }
+
+  .moviecard:hover .moviecard-description {
+    bottom: 0;
+    opacity: 1;
+  }
+  .onemovie img {
+    border-radius: 0.75rem;
+  }
+
+  .onemovie-desktop {
+    display: block;
+  }
+
+  .onemovie-mobile {
+    display: none;
   }
 }
