--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,7 @@ a {
 }
 
 .dropbtn {
-  background-color: rgb(148, 101, 196);
+  background-color: rgba(149, 101, 196, 0);
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -164,7 +164,7 @@ a {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #f9f9f938;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
